--- a/sass/gen/_reset.scss
+++ b/sass/gen/_reset.scss
@@ -26,7 +26,12 @@ input {
 
 .app {
   display: grid;
-  grid-template-rows: 10vh 55vh 10vh 25vh;
+  grid-template-rows: 10vh 90vh;
+
+  &-holder {
+    display: grid;
+    grid-template-rows: 55vh 10vh 25vh;
+  }
 
   &-container {
     width: 100%;
@@ -34,4 +39,8 @@ input {
     justify-content: space-between;
     padding: 0 15rem;
   }
+}
+
+.hide {
+  display: none;
 }
