--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,12 +20,18 @@ input:focus {
 
 .app {
   display: grid;
-  grid-template-rows: 10vh 55vh 10vh 25vh; }
+  grid-template-rows: 10vh 90vh; }
+  .app-holder {
+    display: grid;
+    grid-template-rows: 55vh 10vh 25vh; }
   .app-container {
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 0 15rem; }
+
+.hide {
+  display: none; }
 
 .others {
   width: 100%;
