--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,9 +48,11 @@ input:focus {
 
 .form {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   z-index: 200; }
+  .form__title {
+    font-size: 3rem; }
   .form input {
     width: 40%;
     border-radius: 5rem;
