fixed forecat bugs

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,11 +50,12 @@ input:focus {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  z-index: 200; }
+  z-index: 200;
+  width: 75%; }
   .form__title {
     font: 500 3rem "Bespoke Stencil", san-serif; }
   .form input {
-    width: 40%;
+    width: 50%;
     border-radius: 5rem;
     color: #333;
     border: 1px solid transparent;
