fixed the pseudo element

--- a/sass/gen/_dashboard.scss
+++ b/sass/gen/_dashboard.scss
@@ -45,12 +45,13 @@
       &::after {
         content: "";
         position: absolute;
-        top: 30%;
-        right: -14%;
+        top: 0;
+        right: 0;
         width: 5rem;
         height: 5rem;
         border: 2rem solid #fff;
         border-radius: 50%;
+        transform: translate(100%, 120%);
       }
     }
   }
