--- a/sass/gen/_dashboard.scss
+++ b/sass/gen/_dashboard.scss
@@ -1,81 +1,91 @@
 .city {
-  height: fit-content;
-  margin-top: 10rem;
-
-  &__location {
-    &--name {
-      font: 500 10rem "Bespoke Stencil", san-serif;
+    height: fit-content;
+    margin-top: 10rem;
+    &__location {
+        &--name {
+            font: 500 10rem "Bespoke Stencil", san-serif;
+            position: relative;
+            animation: move 3s ease-out infinite;
+        }
     }
-  }
-
-  &__date {
-    &--value {
-      font-size: 2.2rem;
+    @keyframes move {
+        0% {
+            left: 0px;
+        }
+        50% {
+            left: 100px;
+        }
+        100% {
+            left: 0px;
+        }
     }
-  }
+    &__date {
+        &--value {
+            font-size: 2.2rem;
+        }
+    }
 }
 
 .condition {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 35rem;
-
-  &__status {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    img {
-      color: #fff;
-      width: 10rem;
-      height: 10rem;
+    height: 35rem;
+    &__status {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            color: #fff;
+            width: 10rem;
+            height: 10rem;
+        }
+        &--value {
+            font-size: 3rem;
+        }
     }
-
-    &--value {
-      font-size: 3rem;
+    &__temp {
+        &--value {
+            font: 500 35rem "Bespoke Stencil", san-serif;
+            position: relative;
+            &::after {
+                content: "";
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 5rem;
+                height: 5rem;
+                border: 2rem solid #fff;
+                border-radius: 50%;
+                transform: translate(100%, 120%);
+            }
+        }
     }
-  }
-
-  &__temp {
-    &--value {
-      font: 500 35rem "Bespoke Stencil", san-serif;
-      position: relative;
-
-      &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 5rem;
-        height: 5rem;
-        border: 2rem solid #fff;
-        border-radius: 50%;
-        transform: translate(100%, 120%);
-      }
-    }
-  }
 }
 
 .forecast {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-
-  &__day {
-    border: 1px solid #fff;
     width: 100%;
     display: grid;
-    grid-template-rows: 30% 70%;
-    padding: 1.5rem 0;
-
-    &--date {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2.5rem;
-      width: 70%;
-      margin: 0 auto;
+    grid-template-columns: repeat(5, 1fr);
+    &__day {
+        border: 1px solid #fff;
+        width: 100%;
+        display: grid;
+        grid-template-rows: 30% 70%;
+        padding: 1.5rem 0;
+        &--date {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2.5rem;
+            width: 70%;
+            margin: 0 auto;
+        }
     }
-  }
+}
+
+@media screen and (max-width:700px) {
+    .city {
+        width: 100%;
+    }
 }
