--- a/sass/gen/_reset.scss
+++ b/sass/gen/_reset.scss
@@ -13,11 +13,12 @@ body {
     width: 100%;
     font: 300 1.8rem "Pally", sans-serif;
     color: #fff;
-    background: url("../img/background.jpg") no-repeat;
+    background: url("../../src/img/b1.jpg") no-repeat;
     top: 0;
     left: 0;
     background-size: cover;
     overflow: hidden;
+    animation: slides 20s infinite;
 }
 
 input {
@@ -43,4 +44,49 @@ input {
 
 .hide {
     display: none;
+}
+
+@keyframes slides {
+    0% {
+        background: url("../../src/img/b1.jpg");
+        top: 0;
+        left: 0;
+        background-size: cover
+    }
+    10% {
+        background: url("../../src/img/b1.jpg");
+        top: 0;
+        left: 0;
+        background-size: cover
+    }
+    20% {
+        background: url("../../src/img/b2.jpg");
+        top: 0;
+        left: 0;
+        background-size: cover
+    }
+    40% {
+        background: url("../../src/img/b2.jpg");
+        top: 0;
+        left: 0;
+        background-size: cover
+    }
+    60% {
+        background: url("../../src/img/b3.jpg");
+        top: 0;
+        left: 0;
+        background-size: cover
+    }
+    80% {
+        background: url("../../src/img/b3.jpg");
+        top: 0;
+        left: 0;
+        background-size: cover
+    }
+    100% {
+        background: url("../../src/img/b1.jpg");
+        top: 0;
+        left: 0;
+        background-size: cover
+    }
 }
