--- a/sass/gen/_card.scss
+++ b/sass/gen/_card.scss
@@ -1,17 +1,60 @@
 .others {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-
-  &__condition {
-    padding: 1.5rem 3rem;
-    background-color: #fff;
-    box-shadow: 0 2px 10px 5px #3333331f;
-    color: #0b163f;
-
-    span:nth-child(2) {
-      color: #f74242;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    &__condition {
+        padding: 1.5rem 3rem;
+        background-color: #fff;
+        box-shadow: 0 2px 10px 5px #3333331f;
+        color: #0b163f;
+        span:nth-child(2) {
+            color: #f74242;
+        }
     }
-  }
+}
+
+@media screen and (max-width: 600px) {
+    .app-holder {
+        width: 53%;
+        position: absolute;
+    }
+    .forecast__day--date {
+        justify-content: center;
+        align-items: center;
+    }
+    body {
+        flex-direction: column-reverse;
+        margin: 0 auto;
+        font-size: small;
+    }
+    .app {
+        position: absolute;
+    }
+    .form {
+        position: absolute;
+        width: 100%;
+        transform: translateX(100%);
+        display: flexbox;
+        flex-direction: column-reverse;
+        &__title {
+            overflow: hidden;
+            display: none;
+        }
+        &__search {
+            padding: 100%;
+            transform: translateX(50%);
+            width: 100%;
+        }
+    }
+    .forecast {
+        width: 100%;
+        bottom: 0;
+        padding-left: 4%;
+        position: relative;
+        grid-template-columns: repeat(1, 5fr);
+        margin-bottom: 5px;
+        margin-top: 10px;
+        flex-direction: row-reverse;
+    }
 }
